--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,9 @@ services:
       - db:/var/lib/mysql
     ports:
       - 3306:3306
+    environment:
+      MYSQL_DATABASE: kaddem
+      MYSQL_ROOT_PASSWORD: root
+
+volumes:
+  db:
