--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,31 +3,27 @@ version: "3.7"  # Utilisation d'une version plus récente de Docker Compose
 services:
   Equipeservice:
     image: aslytaha/kaddem:1.0.0
-    restart: always
+    restart: on-failure
     depends_on:
       - mysql
     ports:
-      - 8089:8089
-    environment:
-      - spring.datasource.url=jdbc:mysql://localhost:3306/kaddem\db?&createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=
-  node-exporter:
-    image: prom/node-exporter
-    container_name: node-exporter
-    ports:
-      - "9100:9100"
+      - 8090:8089
+    stdin_open: true
+    tty: true
+    volumes:
+      - .m2:/root/.m2
+
+
   mysql:
     container_name: mysql
     image: mysql
-    restart: always
     volumes:
       - db:/var/lib/mysql
     ports:
-      - 3306:3306
+      - 3307:3306
     environment:
       MYSQL_DATABASE: kaddem
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD:
 
 volumes:
   db:
