--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - 3307:3306
     environment:
       MYSQL_DATABASE: kaddem
-      MYSQL_ROOT_PASSWORD:
+      MYSQL_ROOT_PASSWORD: root
 
 volumes:
   db:
